<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Deudores</string>
    <string name="titulo_login">LOGIN</string>
    <string name="registro" translatable="false" tools:ignore="MissingTranslation">Registro</string>
    <string name="nombres">Nombre</string>
    <string name="correo">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Password</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar">Confirmar Password</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género</string>
    <string name="respuesta">Nombre: %s \nCorreo: %s \nContraseña: %s \nTelefono: %s \nGenero: %s \nPasatiempos: %s \nFecha de nacimiento: %s \nCiudad de nacimiento: %s</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="nadar">Nadar</string>
    <string name="cine">Cine</string>
    <string name="comer">Comer</string>
    <string name="contraseña_no_coincide">Contraseñas no coinciden</string>
    <string name="lugar_de_nacimiento">Lugar de nacimiento</string>
    <string name="futbol">Fútbol</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="login">LOGIN</string>
    <string name="registrologin">REGISTRO</string>
    <string-array name="ciudad_nacimiento">
        <item>Seleccione una ciudad</item>
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Bucaramanga</item>
        <item>Barranquilla</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_nombre">"Nombre "</string>
    <string name="deuda">Valor deuda</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="crear">Crear</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_botton">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>